--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "http://firmamentbot.com/",
   "dependencies": {
     "axios": "^0.18.0",
+    "query-string": "^6.0.0"
+  },
+  "devDependencies": {
     "mocha": "^5.1.1",
-    "query-string": "^6.0.0",
     "should": "^13.2.1"
   }
 }
